--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.3
+  cached_network_image: ^3.4.1
+  google_fonts: ^6.2.1
+  carousel_slider: ^5.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app_icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
