--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dev_dependencies:
   cached_network_image: ^3.4.1
   google_fonts: ^6.2.1
   carousel_slider: ^5.0.0
+  table_calendar: ^3.0.9
+  fluttertoast: ^8.2.12
 
 flutter_icons:
   android: true
