--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   provider: ^6.1.4
+  flutter_svg: ^2.1.0
 
 dev_dependencies:
   flutter_test:
